src/tests/snapshots/ppl__tests__multiple_errors.error.snap
---
source: src/tests/mod.rs
expression: err
---
Error: semantics::undefined_variable

  × variable `y` is not defined
   ╭─[main.ppl:1:1]
 1 │ y = 2
   · ┬
   · ╰── reference to undefined variable
 2 │ Integer { x: 1 }
   ╰────
semantics::no_member

  × no member `x` in `Integer`
   ╭─[main.ppl:2:1]
 1 │ y = 2
 2 │ Integer { x: 1 }
   · ───┬───   ┬
   ·    │      ╰── no member `x` in `Integer`
   ·    ╰── this has `Integer` type
   ╰────
